--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "bun": "^1.3.7",
+    
+    "turbo": "^2.7.6",
     "typescript": "^5.9.3"
   }
 }
